<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
...
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- Button for Sunrise Activity -->
        <ImageButton
            android:id="@+id/btn_sunrise"
            android:layout_width="60dp"
            android:layout_height="51dp"
            android:contentDescription="@string/sunrise"
            android:onClick="startSunriseActivity"
            android:src="@drawable/ic_launcher_foreground" />

...
