...
        android:layout_below="@id/latitudeInput" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lookup"
        android:layout_below="@id/longitudeInput"
        android:onClick="onLookupButtonClick" />

    <TextView
        android:id="@+id/textViewSunrise"
        android:layout_width="wrap_content"
...
