...
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FavoritesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/favoritesToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F55459"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

...
