<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RecipeMain">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@drawable/navigation"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a recipe name"
        tools:ignore="InvalidId" />



    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_gravity="center_horizontal"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewSavedRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="View Saved Recipes"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/deleteAllRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete All Recipes"
        android:layout_marginTop="8dp"/>



</LinearLayout>
